--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h3> Djay for <img src="img/mathworks_logo.jpg" style="vertical-align: middle;"> </h3>
     <p> 18 November 2016
   </section>
-  <section data-markdown>
+  <!-- <section data-markdown>
     ###For interview team members
     - David Boissy (Control Design Automation)
     - Mike Carvill (Human Resources)
@@ -33,7 +33,7 @@
     - Gagan Mahan (Control Design Automation)
     - George Quievryn (Control Design Automation)
     - TODO: Add last minute additions
-  </section>
+  </section> -->
   <section data-markdown>
     ###About me
     - Dhanannjay Deo (धनंजय देव)
@@ -81,18 +81,62 @@
   <img src="img/wordcloud_dark.svg" class="stretch">
 </section>
 
+<section><h3> Education </h3></section>
+
 <section>
-  <section><h3> Education </h3></section>
   <section>Master of Science (faculty of engineering)</section>
-  <section>Doctor of Philosophy (Mechanical engineering)</section>
+  <section>
+    <h4> Mesh processing for computerized facial anthropometry</h4>
+    <img src="img/ms_idea.jpg" class="stretch">
+  </section>
+  <section>
+    <h4> Basis </h4>
+    <img src="img/ms_gui.jpg" class="stretch">
+  </section>
+  <section>
+    <h4> Prototype </h4>
+    <img src="img/ms_gui.jpg" class="stretch">
+  </section>
+  <section><h3> Education </h3></section>
 </section>
 
 <section>
+  <h4> Basis </h4>
+  <img src="img/ms_gui.jpg" class="stretch">
+</section>
+
+<section>
+  <p class="fragment"> How soft tissues behave
+  <p class="fragment"> How do they deform
+  <p class="fragment"> How do they cut or burn
+  <p class="fragment"> How much reaction force is exerted on the tool
+  <p class="fragment"> How much of the force is felt by the surgeon
+  <p class="fragment"> What forces are experienced How to simulate soft tissues (in realtime)
+  <p class="fragment"> How to simulate soft tissues (in realtime)
+</section>
+
+<section>
+  <img src="img/rpi_setup.jpg" class="stretch">
+</section>
+
+<section>
+  <h4> How soft tissues behave </h4>
+  <img src="img/rpi_setup.jpg" class="stretch">
+</section>
+
+<section>
+  <section data-markdown>
+    ###Doctor of Philosophy (Mechanical engineering)
+    <p> Computational mechanics, computational linear algebra, design of mechanical systems, internet protocols, (linear and nonlinear) finite element method, Software design
+  </section>
+</section>
+
+<!-- <section>
   <section> <h3>Skills</h3></section>
   <section>Programming</section>
   <section>Math</section>
   <section>Misc</section>
-</section>
+</section> -->
 
 <section>
   <section>
