--- a/index.html
+++ b/index.html
@@ -21,27 +21,9 @@
       <div class="slides">
 
 <section>
-  <section>
-    <h3> Djay for <img src="img/mathworks_logo.jpg" style="vertical-align: middle;"> </h3>
-    <p> 18 November 2016
-  </section>
-  <!-- <section data-markdown>
-    ###For interview team members
-    - David Boissy (Control Design Automation)
-    - Mike Carvill (Human Resources)
-    - Kunal Kadakia (Control Design Automation)
-    - Gagan Mahan (Control Design Automation)
-    - George Quievryn (Control Design Automation)
-    - TODO: Add last minute additions
-  </section> -->
-  <section data-markdown>
-    ###About me
-    - Dhanannjay Deo (धनंजय देव)
-    - mailto:dhandeo@gmail.com
-    - https://github.com/dhandeo
-    - https://www.linkedin.com/in/dhandeo
-    - https://twitter.com/dhandeo
-  </section>
+  <h2> Djay for <img src="img/mathworks_logo.jpg" style="vertical-align: middle;"> </h2>
+  <p> 18 November 2016
+  <p> Dhanannjay Deo (धनंजय देव)
 </section>
 
 <section>
@@ -77,32 +59,29 @@
 </section>
 
 <section>
-
   <img src="img/wordcloud_dark.svg" class="stretch">
 </section>
 
-<section><h3> Education </h3></section>
+<!-- <section><h2> Education </h2></section> -->
 
 <section>
-  <section>Master of Science (faculty of engineering)</section>
   <section>
-    <h4> Mesh processing for computerized facial anthropometry</h4>
+    <h3>Master of Science (faculty of engineering)<h3>
+  </section>
+  <section>
+    <h4>Mesh processing for computerized facial anthropometry</h4>
     <img src="img/ms_idea.jpg" class="stretch">
   </section>
   <section>
-    <h4> Basis </h4>
-    <img src="img/ms_gui.jpg" class="stretch">
+    <h4> Input and process </h4>
+    <img src="img/ms_basis.jpg" class="stretch">
+    <p> Triangulated surface, gaussian curvature, thresholding and morphological operations
   </section>
   <section>
     <h4> Prototype </h4>
     <img src="img/ms_gui.jpg" class="stretch">
+    <p> c, python, matlab, glut, triangulated surface library
   </section>
-  <section><h3> Education </h3></section>
-</section>
-
-<section>
-  <h4> Basis </h4>
-  <img src="img/ms_gui.jpg" class="stretch">
 </section>
 
 <section>
@@ -129,6 +108,11 @@
     ###Doctor of Philosophy (Mechanical engineering)
     <p> Computational mechanics, computational linear algebra, design of mechanical systems, internet protocols, (linear and nonlinear) finite element method, Software design
   </section>
+  <section>
+    <h3> Digital Surgery Simulation</h3>
+    <img src="img/phynness.jpg" class="stretch">
+  </section>
+
 </section>
 
 <!-- <section>
@@ -146,7 +130,7 @@
 
   <section>
     <h3> Digital SlideAtlas </h3>
-    <img src="img/multiuser.svg" class="stretch">
+    <img src="img/multiuser.jpg" class="stretch">
   </section>
 
   <section>
@@ -169,11 +153,6 @@
   <section>
     <h3> Visual Recognition of Objects in image </h3>
     <img src="img/machine-learning.jpg" class="stretch">
-  </section>
-
-  <section>
-    <h3> Digital Surgery Simulation</h3>
-    <img src="img/phynness.jpg" class="stretch">
   </section>
 
   <section>
@@ -338,7 +317,8 @@
   </section>
   <section data-markdown>
       ### LRU Cache
-      - Limit open files over remote file system
+      - Limit open files on the server
+      - over remote file system
       - Performance against stability
       - Tune each system and usage pattern
   </section>
@@ -347,14 +327,13 @@
 <section>
   <section data-markdown>
     ## Plugin system
-    TODO: Add picture
   </section>
 
   <section data-markdown>
     ### On client side component in javascript
     - Creates button(s) and registers callbacks
     - User actions
-      - Identify image region(s)
+      - Identify image region(s) with bounding boxes
       - Select the parameters for operation
       - Submit the task to server
       - Long poll / websockets to wait and fetch
@@ -362,9 +341,9 @@
   </section>
 
   <section data-markdown>
-    ### On server side component in javascript
+    ### On server side component in python
     - Web server accepts an analysis request
-    - Submit the analysis task to a job queue
+    - Submit the analysis task to "celery" job queue
     - Queue assembles the image as specified
     - Runs analysis
     - Compile results
@@ -372,12 +351,12 @@
     - Book keeping
   </section>
 
-  <section> <h3> Analysis color thresholding </h3>
+  <section> <h3> Color histograms and thresholding </h3>
     <img src="img/histograms.jpg" class="stretch">
   </section>
 
-  <section>Machine learning plugin
-    <img src="img/machine-learning.jpg" height="70%">
+  <section><h3>Machine learning plugin </h3>
+    <img src="img/machine-learning.jpg" class="stretch">
   </section>
 
 </section>
@@ -428,13 +407,25 @@
  </section>
 
 <section>
+  <h3>Thank you ! </h3>
   <img src="img/dilbert.jpg" class="stretch">
 </section>
 
-<section data-markdown>###Thank you !
-
-Questions, Comments, Advisements ?
+<section>
+  <h3> Questions, Comments, Advisements ?</h3>
+  <p>
+  <br>
+  <br>
+  <pre style="font-size:24px">
+                               dhandeo@gmail.com
+            https://github.com/dhandeo
+   https://www.linkedin.com/in/dhandeo
+           https://twitter.com/dhandeo
+  </pre>
 </section>
+
+
+
       </div>
     </div>
 
