--- a/index.html
+++ b/index.html
@@ -28,19 +28,11 @@
 
 <section>
   <section data-markdown>###Outline
-  - About us
+  - About me
   - Experiences
-    - Education
+    - Graduate research
     - Notable projects
   - Digital SlideAtlas in detail
-      - Features (demo)
-      - Challenges
-      - Image streaming
-      - Server architecture
-      - Optimizations
-      - Maintainance
-      - Plugin System
-      - Impact
   </section>
 
   <section data-markdown>
@@ -59,14 +51,18 @@
 </section>
 
 <section>
-  <img src="img/wordcloud_dark.svg" class="stretch">
+  <img src="img/wordcloud_dark.svg" class="stretch" style="border:none">
 </section>
 
 <!-- <section><h2> Education </h2></section> -->
 
 <section>
   <section>
-    <h3>Master of Science (faculty of engineering)<h3>
+    <h3>Master of Science (faculty of engineering)</h3>
+    <p> Indian Institute of Science, Bangalore, India, 2003-6 </p>
+    <br>
+    <br>
+    <p> Product design, mechanism design, geometric modeling, CAD </p>
   </section>
   <section>
     <h4>Mesh processing for computerized facial anthropometry</h4>
@@ -80,57 +76,66 @@
   <section>
     <h4> Prototype </h4>
     <img src="img/ms_gui.jpg" class="stretch">
-    <p> c, python, matlab, glut, triangulated surface library
+    <p> c, python, matlab, OpenGL, glut, glui
   </section>
 </section>
 
 <section>
-  <p class="fragment"> How soft tissues behave
-  <p class="fragment"> How do they deform
-  <p class="fragment"> How do they cut or burn
-  <p class="fragment"> How much reaction force is exerted on the tool
-  <p class="fragment"> How much of the force is felt by the surgeon
-  <p class="fragment"> What forces are experienced How to simulate soft tissues (in realtime)
-  <p class="fragment"> How to simulate soft tissues (in realtime)
-</section>
-
-<section>
-  <img src="img/rpi_setup.jpg" class="stretch">
-</section>
-
-<section>
-  <h4> How soft tissues behave </h4>
-  <img src="img/rpi_setup.jpg" class="stretch">
-</section>
-
-<section>
-  <section data-markdown>
-    ###Doctor of Philosophy (Mechanical engineering)
-    <p> Computational mechanics, computational linear algebra, design of mechanical systems, internet protocols, (linear and nonlinear) finite element method, Software design
-  </section>
   <section>
-    <h3> Digital Surgery Simulation</h3>
+    <h3> Doctor of Philosophy (Mechanical engineering) </h3>
+    <p> Rensselaer Polytechnic Institute, Troy, NY, 2005-10 </p>
+    <br>
+    <p> Computational mathematics, Computational mechanics,
+    (linear and nonlinear) finite element method,
+    Software design
+  </section>
+
+  <section>
+    <h3> Simulation based training </h3>
+    <img src="img/training.jpg" class="stretch">
+    <p> For laparoscopic surgery
+  </section>
+
+
+  <section>
+    <p class="fragment"> How soft tissues interact with the tool
+    <p class="fragment"> How do they deform
+    <p class="fragment"> How do they cut or burn
+    <p class="fragment"> How much reaction force is exerted on the tool
+    <p class="fragment" style="color:red"> Experiment !!
+  </section>
+
+  <section>
+    <img src="img/rpi_setup.jpg" class="stretch">
+  </section>
+
+  <section>
+    <p class="fragment"> What are models of soft tissues
+    <p class="fragment"> How to simulate soft tissues ?
+    <p class="fragment" style="color:red"> Use COTS solver like Abaqus
+    <p class="fragment"> How to interactively simulate soft tissues ?
+    <p class="fragment" style="color:green">in realtime ?</span>
+  </section>
+
+  <section>
+    <h3> Simulator architecture </h3>
+    <img src="img/simulator.jpg" class="stretch">
+  </section>
+
+  <section>
+    <h3> PhyNNeSS </h3>
     <img src="img/phynness.jpg" class="stretch">
+    <p> Tunable data approximation using radial basis function network
+    <p> C++, OpenGL, python, <span style="color:red">matlab</span>
   </section>
 
 </section>
 
-<!-- <section>
-  <section> <h3>Skills</h3></section>
-  <section>Programming</section>
-  <section>Math</section>
-  <section>Misc</section>
-</section> -->
-
 <section>
   <section>
-    <h3>Notable Projects<h3>
-    <p> TODO: add technologies used in each
-  </section>
-
-  <section>
-    <h3> Digital SlideAtlas </h3>
-    <img src="img/multiuser.jpg" class="stretch">
+    <h3>Notable projects at Kitware Inc <img src="img/kitware.jpg" style="vertical-align:middle"> </h3>
+    <br>
+    <p> Kitware is technical software company specializing in R and D in the domains of medical imaging, computer vision and scientific visualization
   </section>
 
   <section>
