--- a/index.html
+++ b/index.html
@@ -138,14 +138,6 @@
 </section>
 
 <section>
-
-  <section>
-    <video src="img/triage.webm" controls class="stretch">
-      Your browser does not support the <code>video</code> element.
-    </video>
-    <p> Disclaimer: my words but not my voice
-  </section>
-
   <section>
     <h2> Kitware GENIE </h2>
     <p>  General Engine for Indexing Events </p>
@@ -153,6 +145,13 @@
     <p class="fragment"> Interactive evaluation of machine learning system
     <!-- <p class="fragment"> One shot video search pipeline -->
     <p class="fragment" style="color:red"> Demo again ?</span>
+  </section>
+
+  <section>
+    <video src="img/triage.webm" controls class="stretch">
+      Your browser does not support the <code>video</code> element.
+    </video>
+    <p> Disclaimer: my words but not my voice
   </section>
 
   <section>
@@ -182,7 +181,7 @@
 </section>
 
 <section data-markdown>
-###Outside work hours
+###Beyond day job
 - 3d modeling and animation
 - Endurance cycling
 - DIY Furniture design
